# user-agents

./: .gitignore  AUTHORS.md  AUTHORS.txt  CHANGES.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/user_agents/: __init__.py  parsers.py  tests.py
user_agents/: parsers.py  tests.py
