[project]
name = "slipmatio-user-agents"
version = "2025.5.1"
description = "A library to identify devices (phones, tablets) and their capabilities by parsing browser user agent strings."
readme = "README.md"
authors = [{ name = "Ville Säävuori", email = "ville@slipmat.io" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "ua-parser>=1.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_agents"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[project.urls]
Changelog = "https://github.com/slipmatio/user-agents/blob/main/CHANGES.md"
Bluesky = "https://bsky.app/profile/uninen.net"
Source = "https://github.com/slipmatio/user-agents"
Twitter = "https://twitter.com/uninen"
